--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
   "pages":[
+
+    "pages/user/user",
     "pages/home/home",
     "pages/topic/topic",
     "pages/category/category",
     "pages/cart/cart",
-    "pages/user/user",
     "pages/logs/logs"
   ],
   
@@ -51,7 +52,13 @@
     "navigationBarTextStyle":"black"
   },
   "usingComponents": {
-    "van-button": "@vant/weapp/button/index"
+    "van-button": "@vant/weapp/button/index",
+    "van-search": "@vant/weapp/search/index",
+    "van-grid": "@vant/weapp/grid/index",
+    "van-grid-item": "@vant/weapp/grid-item/index",
+    "van-icon": "@vant/weapp/icon/index",
+    "van-overlay": "@vant/weapp/overlay/index",
+    "van-field": "@vant/weapp/field/index"
   },
   "sitemapLocation": "sitemap.json"
 }
