--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,4 +1,5 @@
 {
+    "setting": {},
     "condition": {
         "plugin": {
             "list": []
@@ -15,6 +16,13 @@
                     "name": "",
                     "pathName": "pages/popup/popup",
                     "query": "",
+                    "launchMode": "default",
+                    "scene": null
+                },
+                {
+                    "name": "详情页",
+                    "pathName": "pages/details/details",
+                    "query": "id=1138000",
                     "scene": null,
                     "launchMode": "default"
                 }
